# google2005

./: .gitignore  Cargo.toml  README.md  blough.html  fastly.toml  foo.txt  george_clooney.html
google2005/: Cargo.toml  askama.toml  hello.html
google2005/src/: home_page_response.rs  lib.rs  parser.rs  search_result.rs  search_results.rs  search_results_response.rs  utils.rs
google2005/src/client/stylesheets/: search.css
google2005/src/client/templates/: index.html  search.html
google2005/src/utils/: google2005_error.rs
google2005/test_seeds/: blough.html  cubs.html  cubs2.html
src/: filter.rs  lib.rs  main.rs  parser.rs  search_request.rs  search_result.rs  search_results.rs  search_results_page.rs  search_results_response.rs
src/client/stylesheets/: search.css
src/client/templates/: search.html
src/templates/: search.html
src/utils/: google2005_error.rs
test_seeds/: bar_shaker.html  blough.html  cubs2.html
test_seeds/lib/: people_also_ask.html
wasm32-wasi_executable/: .gitignore  Cargo.toml  fastly.toml
wasm32-wasi_executable/src/: main.rs
wasm32-wasi_executable/src/utils/response/: mod.rs
x86_64-apple-darwin_executable/: Cargo.toml  clooney_x86.html
x86_64-apple-darwin_executable/src/: main.rs
x86_64-apple-darwin_executable/src/utils/: mod.rs
x86_64-apple-darwin_executable/src/utils/request/: mod.rs
x86_64-apple-darwin_executable/src/utils/response/: mod.rs
