[package]
name = "google2005"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
reqwest = "0.11.10"
serde = "1.0.136"
scraper = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
urlencoding = "2.1.0"
ego-tree = "0.6.2"
