[package]
name = "google2005"
version = "0.1.0"
edition = "2021"
default-run = "fastly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "tokio"
# path = "src/bin/main.rs"

[[bin]]
name = "fastly"
path = "src/main.rs"

[dependencies]
askama = "0.11.1"
chunked_transfer = "1.4.0"
ego-tree = "0.6.2"
fastly = "^0.8.2"
serde = "1.0.136"
scraper = "0.12.0"
# tokio = { version = "1.17.0", features = ["full"] }
urlencoding = "2.1.0"