[package]
name = "x86_64-apple-darwin_executable_google2005"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
chunked_transfer = "1.4.0"
ego-tree = "0.6.2"
google2005 = { path = "../google2005" }
serde = "1.0.136"
scraper = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
urlencoding = "2.1.0"
reqwest = "0.11.10"